2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx07/init.c, psx07/psx07.scn, psx07/task.c: Add test for budget and
	replenish period of zero.

2009-07-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to account for properly
	handling keys when a thread has non-NULL key value and key has NULL
	destructor and when a thread has NULL key value and key has
	destructor.
	* psxkey03/.cvsignore, psxkey03/Makefile.am, psxkey03/init.c,
	psxkey03/psxkey03.doc, psxkey03/psxkey03.scn: New files.

2009-07-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test for exercising running out of
	memory while allocating the key pointers.
	* psxkey02/.cvsignore, psxkey02/Makefile.am, psxkey02/init.c,
	psxkey02/psxkey02.doc, psxkey02/psxkey02.scn: New files.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxmsgq04/init.c: Add call to mq_unlink.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add shell of new test.
	* psxmsgq04/.cvsignore, psxmsgq04/Makefile.am, psxmsgq04/init.c,
	psxmsgq04/psxmsgq04.doc, psxmsgq04/psxmsgq04.scn: New files.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test to address cases where a thread
	is waiting on a signal (sigwait) and we send it. Also address case
	where there are too many queued signals.
	* psxsignal03/.cvsignore, psxsignal03/Makefile.am, psxsignal03/init.c,
	psxsignal03/psxsignal03.doc, psxsignal03/psxsignal03.scn: New files.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsignal02/init.c: Fix spacing.

2009-07-28	Santosh G Vattam <vattam.santosh@gmail.com>

	* psxmsgq01/init.c, psxmsgq01/psxmsgq01.scn: Add tests for various
	mq_timedreceive and mq_timedsend conditions. In particular test
	timeout in the past.

2009-07-28	Santosh G Vattam <vattam.santosh@gmail.com>

	* psx05/init.c, psx05/psx05.scn: Add test for pthread_mutex_timedlock