@@ -8,8 +8,8 @@ SUBDIRS = psxhdrs psx01 psx02 psx03 psx04 psx05 psx06 psx07 psx08 psx09 \
     psx10 psx11 psx12 psx13 psx14 psxautoinit01 psxautoinit02 psxbarrier01 \
     psxcancel psxcleanup psxcond01 psxenosys psxkey01 psxkey02 psxkey03 \
     psxitimer psxmsgq01 psxmsgq02 psxmsgq03 psxmsgq04 psxmutexattr01 psxobj01 \
-    psxrwlock01 psxsem01 psxsignal01 psxsignal02 psxsignal03 psxspin01 \
-    psxspin02 psxsysconf psxtime psxtimer01 psxtimer02 psxualarm \
+    psxrwlock01 psxsem01 psxsignal01 psxsignal02 psxsignal03 psxsignal03 \
+    psxspin01 psxspin02 psxsysconf psxtime psxtimer01 psxtimer02 psxualarm \
     psxfatal01 psxfatal02 \
     psxintrcritical01
 
