@@ -71,6 +71,7 @@ psxsem01/Makefile
 psxsignal01/Makefile
 psxsignal02/Makefile
 psxsignal03/Makefile
+psxsignal04/Makefile
 psxspin01/Makefile
 psxspin02/Makefile
 psxstat/Makefile
